--- a/code.ipynb
+++ b/code.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "6ba95bc5",
+   "execution_count": 69,
+   "id": "c086dfa0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,8 +18,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "7badf6b1",
+   "execution_count": 70,
+   "id": "54c52fac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,14 +31,14 @@
     "    lowcut=lowcut/nyq\n",
     "    highcut=highcut/nyq\n",
     "    #b,a=numerator and denominator values of the IIR Filter\n",
-    "    b,a=butter(order,[low,high],btype='band')\n",
+    "    b,a=butter(order,[lowcut,highcut],btype='band')\n",
     "    return b,a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "6c64f1e5",
+   "execution_count": 71,
+   "id": "5c3875a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,8 +56,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "873c024a",
+   "execution_count": 72,
+   "id": "60d06479",
    "metadata": {},
    "outputs": [
     {
@@ -79,8 +79,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "598ce3ee",
+   "execution_count": 73,
+   "id": "f92dc082",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "016e4fe1",
+   "id": "a38e0cd8",
    "metadata": {},
    "source": [
     "Defining some variables used to load and process the EEG Data\n",
@@ -105,8 +105,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "30481651",
+   "execution_count": 74,
+   "id": "19e9bab1",
    "metadata": {},
    "outputs": [
     {
@@ -143,18 +143,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "ca37c698",
+   "execution_count": 75,
+   "id": "42c71ccc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "time=time.process_time()"
+    "start1=time.process_time()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "4cb1f480",
+   "execution_count": 76,
+   "id": "d4fb6fcc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,8 +164,140 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 77,
+   "id": "a5784f0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_fea=14\n",
+    "all=all[0:full*8,0:n_fea]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7edde3f",
+   "metadata": {},
+   "source": [
+    "### Next steps - Performing a filtering operation on a EEG Dataset to extract the delta wave pattern using a Butterworth filter\n",
+    "\n",
+    "1. **start2**= measures the starting time using `time.process_time()` function and stores it in a variable\n",
+    "2. Initialize an empty list **data_f1** to store the filtered EEG data\n",
+    "3. Loop over the columns of the `all` array using `range(all.shape[1])`\n",
+    "4. For each column, applies a bandpass filter using the butter_bandpass_filter function with the specified lowcut, highcut and sampling frequency values. The filtered data is then stored in the `data_f1 list`.\n",
+    "5. Convert the `data_f1` list to a numpy array and then transpose it\n",
+    "6. Replace the original `all` array with the filtered data array `data_f1`\n",
+    "7. Measure the ending time using the `time.process_time()` function and store it in a variable `time3`\n",
+    "8. Print the shape of the filtered data array and the elapsed timem for the filtering operation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "20c5fb31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Timing the process\n",
+    "start=time.process_time()\n",
+    "\n",
+    "#Empty list\n",
+    "data_f1=[]\n",
+    "for i in range(all.shape[1]):\n",
+    "    x=all[:,i]\n",
+    "    fs=128.0\n",
+    "    lowcut=0.5\n",
+    "    highcut=4.0\n",
+    "    y=butter_bandpass_filter(x,lowcut,highcut,fs,order=3)\n",
+    "    data_f1.append(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "cf671395",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data_f1.shape (56000, 14)\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_f1=np.array(data_f1)\n",
+    "data_f1=data_f1.T\n",
+    "print('data_f1.shape',data_f1.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "c85a4334",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PD time 0.0\n",
+      "(56000, 15)\n"
+     ]
+    }
+   ],
+   "source": [
+    "all=data_f1\n",
+    "end=time.process_time()\n",
+    "print('PD time',start-end)\n",
+    "all=np.hstack((all,label))\n",
+    "print(all.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "155fa092",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.]\n",
+      " [0.]\n",
+      " [0.]\n",
+      " ...\n",
+      " [7.]\n",
+      " [7.]\n",
+      " [7.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#all=combine data\n",
+    "data_size=all.shape[0]\n",
+    "\n",
+    "feature_all=all[:,0:n_fea]\n",
+    "print(all[:,n_fea:n_fea+1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "ecdedd3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feature_all=feature_all-4200 #minus Direct Current\n",
+    "#z-score scaling\n",
+    "feature_all=sklearn.preprocessing.scale(feature_all)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "aafba629",
+   "id": "26ea0e18",
    "metadata": {},
    "outputs": [],
    "source": []
