--- a/code.ipynb
+++ b/code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 40,
    "id": "c086dfa0",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 41,
    "id": "54c52fac",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 42,
    "id": "5c3875a6",
    "metadata": {},
    "outputs": [],
@@ -51,12 +51,12 @@
     "    y_=np.array(y_)\n",
     "    y_=y_.reshape(len(y_))\n",
     "    n_values=np.max(y_)+1\n",
-    "    return np.eye(n_values)[np.array(y_,dtype=np.int32)]"
+    "    return np.eye(int(n_values))[np.array(y_,dtype=np.int32)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 43,
    "id": "60d06479",
    "metadata": {},
    "outputs": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 44,
    "id": "f92dc082",
    "metadata": {},
    "outputs": [],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 45,
    "id": "19e9bab1",
    "metadata": {},
    "outputs": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 46,
    "id": "42c71ccc",
    "metadata": {},
    "outputs": [],
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 47,
    "id": "d4fb6fcc",
    "metadata": {},
    "outputs": [],
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 48,
    "id": "a5784f0d",
    "metadata": {},
    "outputs": [],
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 49,
    "id": "20c5fb31",
    "metadata": {},
    "outputs": [],
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 50,
    "id": "cf671395",
    "metadata": {},
    "outputs": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 51,
    "id": "c85a4334",
    "metadata": {},
    "outputs": [
@@ -241,7 +241,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PD time 0.0\n",
+      "PD time -0.015625\n",
       "(56000, 15)\n"
      ]
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 52,
    "id": "155fa092",
    "metadata": {},
    "outputs": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 53,
    "id": "ecdedd3e",
    "metadata": {},
    "outputs": [],
@@ -296,8 +296,172 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "26ea0e18",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(56000, 15)\n"
+     ]
+    }
+   ],
+   "source": [
+    "label_all=all[:,n_fea:n_fea+1]\n",
+    "all=np.hstack((feature_all,label_all))\n",
+    "print(all.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "0b91dfc4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Using the first subject as testing subject\n",
+    "np.random.shuffle(all)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "20c98111",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data=all[0:int(data_size*0.875)] #Training data is 87.5% of original\n",
+    "test_data=all[int(data_size*0.875):data_size]\n",
+    "\n",
+    "no_fea=n_fea\n",
+    "n_steps=len_sample\n",
+    "\n",
+    "feature_training=train_data[:,0:no_fea]\n",
+    "feature_training=feature_training.reshape([train_data.shape[0],n_steps,no_fea])\n",
+    "\n",
+    "feature_testing=test_data[:,0:no_fea]\n",
+    "feature_training = feature_training.reshape([train_data.shape[0], n_steps, no_fea])\n",
+    "\n",
+    "\n",
+    "feature_testing = test_data[:,0:no_fea]\n",
+    "\n",
+    "feature_testing = feature_testing.reshape([test_data.shape[0], n_steps, no_fea])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "acca35fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3. 7. 5. ... 4. 3. 3.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "label_training=train_data[:,no_fea]\n",
+    "label_training=one_hot(label_training)\n",
+    "label_testing=test_data[:,no_fea]\n",
+    "print(label_testing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "c9428c5d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(56000, 15)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(all.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3cb8c0c9",
+   "metadata": {},
+   "source": [
+    "### Batch Splitting\n",
+    "**Splitting the input data into batches for training in order to process it more efficiently**\n",
+    "\n",
+    "***Steps Involved***\n",
+    "1. It calculates the batch size by multiplying the total data size by 0.125 (12.5%).\n",
+    "2. It creates an empty list called train_fea.\n",
+    "3. It sets the number of groups to 7.\n",
+    "4. It loops through each group and selects the corresponding slice of the feature_training array to add to the train_fea list. Each slice is determined by multiplying the batch size by the group index and adding 0 to the start and end indices for the first group, adding one batch size to both the start and end indices for the second group, and so on. The result is that train_fea is a list of 7 arrays, each with batch_size rows and some number of columns.\n",
+    "5. It prints the shape of the first element of train_fea (which should be (batch_size, num_features)) and the elements of rows 235 and 236 of the first element of train_fea.\n",
+    "6. It creates an empty list called train_label.\n",
+    "7. It loops through each group and selects the corresponding slice of the label_training array to add to the train_label list. The slices are determined in the same way as for train_fea. The result is that train_label is a list of 7 arrays, each with batch_size rows and some number of columns.\n",
+    "8. It prints the shape of the first element of train_label (which should be (batch_size, num_classes)). \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "1c57264d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(7000, 1, 14)\n",
+      "[[[-0.09378779 -0.06043805 -0.09919309  0.03460951 -0.08454526\n",
+      "   -0.19051451 -0.05166393  0.01166725 -0.05876981  0.10477627\n",
+      "    0.00357929 -0.13836816  0.0152799  -0.00602975]]\n",
+      "\n",
+      " [[-0.03912419 -0.02063108  0.01708471  0.04179383  0.20251174\n",
+      "    0.10139998  0.09560028  0.12901811  0.01292951  0.18021937\n",
+      "    0.05002188  0.01246227  0.11762213  0.01637767]]]\n",
+      "(7000, 8)\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=feature_training\n",
+    "b=feature_testing\n",
+    "nodes=30\n",
+    "lameda=0.001\n",
+    "lr=0.001\n",
+    "\n",
+    "batch_size=int(data_size*0.125)\n",
+    "\n",
+    "n_group=7\n",
+    "\n",
+    "def range_calculator(listname,listdest):\n",
+    "    for i in range(n_group):\n",
+    "        f=listname[(0+batch_size*i):(batch_size+batch_size*i)]\n",
+    "        listdest.append(f)\n",
+    "\n",
+    "train_fea=[]\n",
+    "train_label=[]\n",
+    "\n",
+    "range_calculator(a,train_fea)\n",
+    "range_calculator(label_training,train_label)\n",
+    "\n",
+    "print(train_fea[0].shape)\n",
+    "print(train_fea[0][235:237])\n",
+    "\n",
+    "print(train_label[0].shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d56c8b9e",
    "metadata": {},
    "outputs": [],
    "source": []
