Added LSTM Code

--- a/code.ipynb
+++ b/code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 148,
    "id": "c086dfa0",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 149,
    "id": "54c52fac",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 150,
    "id": "5c3875a6",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 151,
    "id": "60d06479",
    "metadata": {},
    "outputs": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 152,
    "id": "f92dc082",
    "metadata": {},
    "outputs": [],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 153,
    "id": "19e9bab1",
    "metadata": {},
    "outputs": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 154,
    "id": "42c71ccc",
    "metadata": {},
    "outputs": [],
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 155,
    "id": "d4fb6fcc",
    "metadata": {},
    "outputs": [],
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 156,
    "id": "a5784f0d",
    "metadata": {},
    "outputs": [],
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 157,
    "id": "20c5fb31",
    "metadata": {},
    "outputs": [],
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 158,
    "id": "cf671395",
    "metadata": {},
    "outputs": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 159,
    "id": "c85a4334",
    "metadata": {},
    "outputs": [
@@ -241,7 +241,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PD time -0.015625\n",
+      "PD time 0.0\n",
       "(56000, 15)\n"
      ]
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 160,
    "id": "155fa092",
    "metadata": {},
    "outputs": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 161,
    "id": "ecdedd3e",
    "metadata": {},
    "outputs": [],
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 162,
    "id": "26ea0e18",
    "metadata": {},
    "outputs": [
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 163,
    "id": "0b91dfc4",
    "metadata": {},
    "outputs": [],
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 164,
    "id": "20c98111",
    "metadata": {},
    "outputs": [],
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 165,
    "id": "acca35fa",
    "metadata": {},
    "outputs": [
@@ -360,7 +360,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[3. 7. 5. ... 4. 3. 3.]\n"
+      "[0. 1. 1. ... 7. 3. 6.]\n"
      ]
     }
    ],
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 166,
    "id": "c9428c5d",
    "metadata": {},
    "outputs": [
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 167,
    "id": "1c57264d",
    "metadata": {},
    "outputs": [
@@ -419,13 +419,13 @@
      "output_type": "stream",
      "text": [
       "(7000, 1, 14)\n",
-      "[[[-0.09378779 -0.06043805 -0.09919309  0.03460951 -0.08454526\n",
-      "   -0.19051451 -0.05166393  0.01166725 -0.05876981  0.10477627\n",
-      "    0.00357929 -0.13836816  0.0152799  -0.00602975]]\n",
+      "[[[ 0.042783    0.1377656  -0.01978495  0.00890953 -0.0072165\n",
+      "    0.06600291 -0.03770078 -0.01082981 -0.07334202  0.03269157\n",
+      "    0.06984906  0.00142352  0.04783427  0.01854654]]\n",
       "\n",
-      " [[-0.03912419 -0.02063108  0.01708471  0.04179383  0.20251174\n",
-      "    0.10139998  0.09560028  0.12901811  0.01292951  0.18021937\n",
-      "    0.05002188  0.01246227  0.11762213  0.01637767]]]\n",
+      " [[-0.17298104 -0.07393439 -0.03212914  0.19396801 -0.09174386\n",
+      "    0.16028462  0.0908069  -0.0637945  -0.1560574  -0.14098168\n",
+      "    0.00060067 -0.02152958 -0.13572034 -0.16545925]]]\n",
       "(7000, 8)\n"
      ]
     }
@@ -459,9 +459,185 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0619e202",
+   "metadata": {},
+   "source": [
+    "### Defining an RNN Cell "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "id": "1d167978",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#hyperparameters\n",
+    "n_inputs=no_fea\n",
+    "n_hidden1_units=nodes\n",
+    "n_hidden2_units=nodes\n",
+    "n_hidden3_units=nodes\n",
+    "n_hidden4_units=nodes\n",
+    "n_classes=8\n",
+    "\n",
+    "#tf graph input \n",
+    "x=tf.keras.layers.Input(shape=(None,n_inputs),name=\"x\",dtype='float32')\n",
+    "y=tf.keras.layers.Input(shape=(n_classes),dtype='float32',name=\"y\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "id": "93586fff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Defining weights\n",
+    "weights = {\n",
+    "    'in': tf.Variable(tf.random.normal([n_inputs, n_hidden1_units]), trainable=True),\n",
+    "    'a': tf.Variable(tf.random.normal([n_hidden1_units, n_hidden1_units]), trainable=True),\n",
+    "    'hidd2': tf.Variable(tf.random.normal([n_hidden1_units, n_hidden2_units])),\n",
+    "    'hidd3': tf.Variable(tf.random.normal([n_hidden2_units, n_hidden3_units])),\n",
+    "    'hidd4': tf.Variable(tf.random.normal([n_hidden3_units, n_hidden4_units])),\n",
+    "    'out': tf.Variable(tf.random.normal([n_hidden4_units, n_classes]), trainable=True),\n",
+    "    'att': tf.Variable(tf.random.normal([n_inputs, n_hidden4_units]), trainable=True),\n",
+    "    'att2': tf.Variable(tf.random.normal([1, batch_size]), trainable=True),\n",
+    "}\n",
+    "biases = {\n",
+    "    'in': tf.Variable(tf.constant(0.1, shape=[n_hidden1_units])),\n",
+    "    'hidd2': tf.Variable(tf.constant(0.1, shape=[n_hidden2_units])),\n",
+    "    'hidd3': tf.Variable(tf.constant(0.1, shape=[n_hidden3_units])),\n",
+    "    'hidd4': tf.Variable(tf.constant(0.1, shape=[n_hidden4_units])),\n",
+    "    'out': tf.Variable(tf.constant(0.1, shape=[n_classes]), trainable=True),\n",
+    "    'att': tf.Variable(tf.constant(0.1, shape=[n_hidden4_units])),\n",
+    "    'att2': tf.Variable(tf.constant(0.1, shape=[n_hidden4_units])),\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "id": "3b99384d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:\n",
+      "The following Variables were used a Lambda layer's call (tf.linalg.matmul_15), but\n",
+      "are not present in its tracked objects:\n",
+      "  <tf.Variable 'Variable:0' shape=(14, 30) dtype=float32>\n",
+      "It is possible that this is intended behavior, but it is more likely\n",
+      "an omission. This is a strong indication that this layer should be\n",
+      "formulated as a subclassed Layer rather than a Lambda layer.\n",
+      "WARNING:tensorflow:\n",
+      "The following Variables were used a Lambda layer's call (tf.__operators__.add_15), but\n",
+      "are not present in its tracked objects:\n",
+      "  <tf.Variable 'Variable:0' shape=(30,) dtype=float32>\n",
+      "It is possible that this is intended behavior, but it is more likely\n",
+      "an omission. This is a strong indication that this layer should be\n",
+      "formulated as a subclassed Layer rather than a Lambda layer.\n",
+      "WARNING:tensorflow:\n",
+      "The following Variables were used a Lambda layer's call (tf.linalg.matmul_16), but\n",
+      "are not present in its tracked objects:\n",
+      "  <tf.Variable 'Variable:0' shape=(30, 30) dtype=float32>\n",
+      "It is possible that this is intended behavior, but it is more likely\n",
+      "an omission. This is a strong indication that this layer should be\n",
+      "formulated as a subclassed Layer rather than a Lambda layer.\n",
+      "WARNING:tensorflow:\n",
+      "The following Variables were used a Lambda layer's call (tf.__operators__.add_16), but\n",
+      "are not present in its tracked objects:\n",
+      "  <tf.Variable 'Variable:0' shape=(30,) dtype=float32>\n",
+      "It is possible that this is intended behavior, but it is more likely\n",
+      "an omission. This is a strong indication that this layer should be\n",
+      "formulated as a subclassed Layer rather than a Lambda layer.\n",
+      "WARNING:tensorflow:\n",
+      "The following Variables were used a Lambda layer's call (tf.linalg.matmul_17), but\n",
+      "are not present in its tracked objects:\n",
+      "  <tf.Variable 'Variable:0' shape=(30, 30) dtype=float32>\n",
+      "It is possible that this is intended behavior, but it is more likely\n",
+      "an omission. This is a strong indication that this layer should be\n",
+      "formulated as a subclassed Layer rather than a Lambda layer.\n",
+      "WARNING:tensorflow:\n",
+      "The following Variables were used a Lambda layer's call (tf.__operators__.add_17), but\n",
+      "are not present in its tracked objects:\n",
+      "  <tf.Variable 'Variable:0' shape=(30,) dtype=float32>\n",
+      "It is possible that this is intended behavior, but it is more likely\n",
+      "an omission. This is a strong indication that this layer should be\n",
+      "formulated as a subclassed Layer rather than a Lambda layer.\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "too many values to unpack (expected 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[170], line 35\u001b[0m\n\u001b[0;32m     30\u001b[0m     results\u001b[38;5;241m=\u001b[39mtf\u001b[38;5;241m.\u001b[39mmatmul(outputs_att,weights[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mout\u001b[39m\u001b[38;5;124m'\u001b[39m])\u001b[38;5;241m+\u001b[39mbiases[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mout\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m     32\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m results,outputs[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\n\u001b[1;32m---> 35\u001b[0m pred,Feature,_\u001b[38;5;241m=\u001b[39m\u001b[43mRNN\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m,\u001b[49m\u001b[43mweights\u001b[49m\u001b[43m,\u001b[49m\u001b[43mbiases\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[170], line 22\u001b[0m, in \u001b[0;36mRNN\u001b[1;34m(X, weights, biases)\u001b[0m\n\u001b[0;32m     19\u001b[0m lstm_cell_1\u001b[38;5;241m=\u001b[39mtf\u001b[38;5;241m.\u001b[39mkeras\u001b[38;5;241m.\u001b[39mlayers\u001b[38;5;241m.\u001b[39mLSTMCell(n_hidden3_units,unit_forget_bias\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m     20\u001b[0m init_state\u001b[38;5;241m=\u001b[39mlstm_cell_1\u001b[38;5;241m.\u001b[39mget_initial_state(batch_size\u001b[38;5;241m=\u001b[39mbatch_size,dtype\u001b[38;5;241m=\u001b[39mtf\u001b[38;5;241m.\u001b[39mfloat32)\n\u001b[1;32m---> 22\u001b[0m outputs,final_state\u001b[38;5;241m=\u001b[39mtf\u001b[38;5;241m.\u001b[39mkeras\u001b[38;5;241m.\u001b[39mlayers\u001b[38;5;241m.\u001b[39mRNN(lstm_cell_1,return_sequences\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,return_state\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)(X_in,initial_state\u001b[38;5;241m=\u001b[39minit_state)\n\u001b[0;32m     24\u001b[0m \u001b[38;5;66;03m#outputs\u001b[39;00m\n\u001b[0;32m     25\u001b[0m outputs\u001b[38;5;241m=\u001b[39mtf\u001b[38;5;241m.\u001b[39munstack(tf\u001b[38;5;241m.\u001b[39mtranspose(outputs,[\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m2\u001b[39m])) \u001b[38;5;66;03m#states is the last output\u001b[39;00m\n",
+      "\u001b[1;31mValueError\u001b[0m: too many values to unpack (expected 2)"
+     ]
+    }
+   ],
+   "source": [
+    "def RNN(X,weights,biases):\n",
+    "    #hidden layer for input to cell\n",
+    "    ##############################\n",
+    "    \n",
+    "    X=tf.reshape(X,[-1,n_inputs])\n",
+    "    \n",
+    "    #hidden layer\n",
+    "    X_hidd1=tf.sigmoid(tf.matmul(X,weights['in'])+biases['in'])\n",
+    "    X_hidd2=tf.matmul(X_hidd1,weights['hidd2'])+biases['hidd2']\n",
+    "    X_hidd3=tf.matmul(X_hidd2,weights['hidd3'])+biases['hidd3']\n",
+    "    \n",
+    "    X_in=tf.reshape(X_hidd3,[-1,n_steps,n_hidden4_units])\n",
+    "    \n",
+    "    \n",
+    "    #cell\n",
+    "    #####################################\n",
+    "    \n",
+    "    #basic LSTM Cell\n",
+    "    lstm_cell_1=tf.keras.layers.LSTMCell(n_hidden3_units,unit_forget_bias=True)\n",
+    "    init_state=lstm_cell_1.get_initial_state(batch_size=batch_size,dtype=tf.float32)\n",
+    "    \n",
+    "    outputs,final_state=tf.keras.layers.RNN(lstm_cell_1,return_sequences=True,return_state=True)(X_in,initial_state=init_state)\n",
+    "    \n",
+    "    #outputs\n",
+    "    outputs=tf.unstack(tf.transpose(outputs,[1,0,2])) #states is the last output\n",
+    "    \n",
+    "    #attention based model\n",
+    "    X_att2=final_state[0] #weights\n",
+    "    outputs_att=tf.multiply(outputs[-1],X_att2)\n",
+    "    results=tf.matmul(outputs_att,weights['out'])+biases['out']\n",
+    "    \n",
+    "    return results,outputs[-1]\n",
+    "\n",
+    "\n",
+    "pred,Feature,_=RNN(x,weights,biases)\n",
+    "    "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d56c8b9e",
+   "id": "6645493b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lamena=lameda\n",
+    "#Computing l2 loss\n",
+    "l2=lamena*sum(tf.nn.l2_loss(tf_var) for tf_var in tf.compat.v1.trainable_variables())\n",
+    "cost=tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(logits=pred,labels=y))+l2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8b9e405",
    "metadata": {},
    "outputs": [],
    "source": []
